--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/security
+spring.datasource.url= jdbc:postgresql://localhost:5432/deneme
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.show-sql=true
@@ -6,6 +6,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.swagger-ui.path=/swagger-ui.html
-management.endpoint.info.enabled=true
-
+spring-doc.swagger-ui.path=/swagger-ui.html
+spring-doc.show-actuator=true
+management.endpoints.web.exposure.include=openapi, swagger-ui
